Criada a pagina de blog

--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
-    <a href="vendas.html">Ir para a página de vendas 
-    <a href="blog.html">Ir para a página de blog></a>
+    <h1>Página de blog</h1>
+    <h2>Post número 1</h2>
+    <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
